# TTA-Server

./: .dev.env  .docker.env  .gitignore  .pre-commit-config.yaml  Readme.md  docker-compose.yaml  main.py  pyproject.toml
internal/common/: dependency.py
internal/database/: connector.py
repositories/: health.py
routers/: __init__.py
routers/api/: health.py  root.py
services/: health.py
