[tool.poetry]
name = "tta-server"
version = "0.1.0"
description = ""
authors = ["J-Hoplin <hoplin.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
load-dotenv = "^0.1.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
